--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -11,4 +11,5 @@
 </p>
 
 <%= link_to 'Edit', edit_artist_path(@artist) %> |
-<%= link_to 'Back', artists_path %>
+<%= link_to 'Back', artists_path %> |
+<%= link_to 'New Artist', new_artist_path %>
